--- a/website/newsletter/179/index.mdx
+++ b/website/newsletter/179/index.mdx
@@ -10,7 +10,7 @@ Hi everyone!
 
 <Todo />
 
-*   🗓 [React Connection - 22 April](https://reactconnection.io/) + [React-Native Connection - 23 April](https://reactnativeconnection.io/) - 🇫🇷 Paris - 2 days of web/mobile conferences. Get a -20% discount with code "TWIR".
+- 🗓 [React Connection - 22 April](https://reactconnection.io/) + [React-Native Connection - 23 April](https://reactnativeconnection.io/) - 🇫🇷 Paris - 2 days of web/mobile conferences. Get a -20% discount with code "TWIR".
 
 <!-- truncate -->
 
@@ -30,20 +30,15 @@ import Support from "../_support.mdx";
 
 **[React-admin: The Open-Source Framework for B2B apps](https://marmelab.com/react-admin/)**
 
-With 23k stars and 500,000 daily users, react-admin is the framework of choice for single-page applications (ERPs, Admins, B2B apps). Compatible with Vite, Next, and Remix, it builds upon acclaimed libraries like react-hook-form, react-query, react-router and material-ui to accelerate your development game. 
+With 23k stars and 500,000 daily users, react-admin is the framework of choice for single-page applications (ERPs, Admins, B2B apps). Compatible with Vite, Next, and Remix, it builds upon acclaimed libraries like react-hook-form, react-query, react-router and material-ui to accelerate your development game.
 
 🌟 Key characteristics include:
 
-*   🔌 Backend agnostic: Connects to any REST or GraphQL API
-    
-*   🧩 Rich library with over 200 application building blocks
-    
-*   🛠 Complete customization: Replace any component with your own
-    
-*   💻 Great developer experience
-    
-*   👑 Amazing user experience
-    
+- 🔌 Backend agnostic: Connects to any REST or GraphQL API
+- 🧩 Rich library with over 200 application building blocks
+- 🛠 Complete customization: Replace any component with your own
+- 💻 Great developer experience
+- 👑 Amazing user experience
 
 [Join React-admin’s community](https://discord.gg/tKyDzXHJ7f) today and witness firsthand why it's the framework of choice for thousands of developers worldwide! [Try it now](https://marmelab.com/react-admin/Tutorial.html), it is free, forever! 😉
 
@@ -83,7 +78,7 @@ WorkOS is a modern identity platform built for B2B SaaS.
 
 <Todo />
 
-- 💸 [Omlet - Measure React Native component usage in production. Track adoption and get data for codebase improvements in <5 minutes setup](https://omlet.dev/?utm_campaign=partner_this-week-in-react_newsletter-quick-link-rn-mar-2024)
+- 💸 [Omlet - Measure React Native component usage in production. Track adoption and get data for codebase improvements in \<5 minutes setup](https://omlet.dev/?utm_campaign=partner_this-week-in-react_newsletter-quick-link-rn-mar-2024)
 
 ---
 
