--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/178/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/178/index.mdx
@@ -7,11 +7,11 @@ date: 03-20-2024
 
 Salut à tous !
 
-This week is different and important for me. I took a little newsletter break, and instead of having no issue (as I did before), this time it's [Benedikt](https://twitter.com/bndkt) writing the whole newsletter. Back to you Benedikt!
+Cette semaine est différente et importante pour moi. J'ai fait une petite pause dans la rédaction de la newsletter, et au lieu que ce soit sans aucune publication (comme avant), cette fois-ci c'est [Benedikt](https://twitter.com/bndkt) qui écrit toute la newsletter. C'est à toi, Benedikt !
 
 ---
 
-This last week has not seen a lot of releases, maybe everyone is already saving up their announcements for the upcoming conference season. Astro published more details about their new database and also released a developer portal, which starts out as a theme marketplace but will cover integrations in the future as well. Remix is now Vite-first and Vercel published a new AI chatbot template. After a lot of news about React Server Components in the React section, this week we see some news about RSC in the React Native section.
+La semaine dernière, il n'y a pas eu beaucoup de sorties, peut-être que tout le monde réserve déjà ses annonces pour la prochaine saison de conférences. Astro a publié plus de détails sur sa nouvelle base de données et a également publié un portail pour les développeurs, qui fonctionne d'abord comme une boutique de thèmes mais qui couvrira également les intégrations à l'avenir. Remix est maintenant Vite-first et Vercel a publié un nouveau modèle de chatbot IA. Après de nombreuses nouvelles sur React Server Components dans la section React, cette semaine nous voyons des nouvelles sur RSC dans la section React Native.
 
 <!-- truncate -->
 
@@ -48,14 +48,14 @@ Trusted by corporate clients such as The Weather Channel, Deel.com, La Banque Po
 
 🐦 [**Remix is now Vite-first**](https://twitter.com/markdalgleish/status/1770224011831890036)
 
-After a relatively short period of transition where Remix introduced a Vite-integration marked as unstable, this has now been marked stable and immediately became the new default. I personally really enjoyed seeing this quick transition and think Remix plus Vite is a strong combination, and having Vite be the development environment and compiler for Remix allows the Remix team to decrease their surface area and concentrate on core framework capabilities, which is a good thing! A newly created Remix project now only has a Vite config file referencing a Remix plugin, which I think is a beautiful instance of simplification!
+Après une période de transition relativement courte pendant laquelle Remix a introduit une intégration de Vite marquée comme instable, celle-ci a maintenant été marquée comme stable et est immédiatement devenue la nouvelle valeur par défaut. Personnellement, j'ai vraiment apprécié cette transition rapide et je pense que Remix plus Vite est une combinaison forte, et le fait que Vite soit l'environnement de développement et le compilateur pour Remix permet à l'équipe Remix de réduire sa surface et de se concentrer sur les capacités principales du framework, ce qui est une bonne chose ! Un nouveau projet Remix n'a plus qu'un fichier de configuration Vite référençant un plugin Remix, ce qui est à mon avis un bel exemple de simplification !
 
 - 💸 [Document Generation with Apryse - Transforming Templates into Tailored Documents with React](https://apryse.com/blog/docx-generation-from-templates-react?utm_source=email&utm_medium=newsletter&utm_campaign=thisweekinreact4)
-- 📜 [Astro DB: A Deep Dive](https://astro.build/blog/astro-db-deep-dive/): Astro partnered with Turso to integrate libSQL. Also interesting to read why they thought about and ultimately didn’t choose Cloudflare’s D1.
-- 📜 [The Astro Developer Portal](https://astro.build/blog/dev-portal/): An official theme marketplace for Astro.
-- 📜 [How Next.js breaks React Fundamentals](https://ondrejvelisek.github.io/how-nextjs-breaks-react-fundamentals/): I don’t agree with the title and the conclusion, but it’s still an interesting exploration of the limitations of RSC (most of them not specific to Next.js).
-- 📜 [Type system of the React compiler](https://www.recompiled.dev/blog/type-system/): This is quite deep and theoretical, but if you want to learn more about the relation of compilers and type inference, it might be interesting to you.
-- 📜 [Two Types of Composition](https://kyleshevlin.com/two-types-of-composition/): I think sometimes it’s good to revisit the fundamentals of what we’re doing as developers every day. Composition is one of React’s basic principles, and this article looks at the basics of nesting composition and merging composition.
+- 📜 [Astro DB: A Deep Dive](https://astro.build/blog/astro-db-deep-dive/) : Astro s'est associé à Turso pour intégrer libSQL. Il est également intéressant de lire pourquoi ils ont réfléchi à la solution D1 de Cloudflare et ne l'ont finalement pas choisie.
+- 📜 [The Astro Developer Portal](https://astro.build/blog/dev-portal/) : Une galerie de thèmes officielle pour Astro.
+- 📜 [How Next.js breaks React Fundamentals](https://ondrejvelisek.github.io/how-nextjs-breaks-react-fundamentals/) : Je ne suis pas d'accord avec le titre et la conclusion, mais c'est quand même une exploration intéressante des limitations de RSC (dont la plupart ne sont pas spécifiques à Next.js).
+- 📜 [Type system of the React compiler](https://www.recompiled.dev/blog/type-system/) : C'est assez approfondi et théorique, mais si vous voulez en savoir plus sur la relation entre les compilateurs et l'inférence de type, cela peut être intéressant pour vous.
+- 📜 [Two Types of Composition](https://kyleshevlin.com/two-types-of-composition/) : Je pense qu'il est parfois bon de revisiter les fondamentaux de ce que nous faisons quotidiennement en tant que développeurs. La composition est l'un des principes de base de React, et cet article examine les bases de la composition par imbrication et de la composition par fusion.
 - 📜 [Migrate Next.js app away from "Vercel + PlanetScale" to "Fly.io"](https://www.crispyscript.com/articles/13)
 - 📜 [Astro Studio - first impression](https://maciekpalmowski.dev/blog/astro-studio-first-impression/)
 - 📜 [You Are Leaking Your Next.js Application Features](https://www.rexforde.com/blog/conditional-render-problem)
@@ -63,8 +63,8 @@ After a relatively short period of transition where Remix introduced a Vite-inte
 - 📜 [You Can't Make Children "Type Safe" in React & TypeScript](https://www.totaltypescript.com/type-safe-children-in-react-and-typescript)
 - 📜 [How to test React custom hooks and components with Vitest](https://www.thisdot.co/blog/how-to-test-react-custom-hooks-and-components-with-vitest)
 - 📜 [OpenTelemetry in Practice: Instrumenting JavaScript Apps for Tracing](https://marmelab.com/blog/2024/03/14/opentelemetry-in-practice-instrumenting-javascript-apps-for-tracing.html)
-- 🗓 [React Connection - 22 April](https://reactconnection.io/) + [React-Native Connection - 23 April](https://reactnativeconnection.io/) - 🇫🇷 Paris - 2 days of web/mobile conferences. Get a -20% discount with code "TWIR".
-- 📦 [Firebolt](https://firebolt.dev/): A new simple React framework that reminds a bit of Remix. See also the [introductory blog post](https://firebolt.dev/blog/introducing-firebolt). RSC support is in progress.
+- 🗓 [React Connection - 22 April](https://reactconnection.io/) + [React-Native Connection - 23 April](https://reactnativeconnection.io/) - 🇫🇷 Paris - 2 jours de conférences web/mobiles. Bénéficiez d'une réduction de -20% avec le code « TWIR ».
+- 📦 [Firebolt](https://firebolt.dev/) : Un nouveau framework React simple qui rappelle un peu Remix. Voir aussi l'[article introductif du blog](https://firebolt.dev/blog/introducing-firebolt). La prise en charge de RSC est en cours.
 - 📦 [remix-nitro - An example on how to run Remix with Nitro with HMR using Vite's 5.1 experimental runtime API](https://github.com/alessandrojcm/remix-nitro)
 - 📦 [remix-hono v0.0.16 - now on Hono v4](https://github.com/sergiodxa/remix-hono/releases/tag/v0.0.16)
 - 📦 [Next.js AI Chatbot 2.0 - Now on AI SDK 3.0](https://vercel.com/changelog/next-js-ai-chatbot-2-0)
@@ -106,13 +106,13 @@ TWIR exclusive: [Get 25% off your FormBuilder SDK license](https://tripetto.com/
 
 🐦 [**Demo of React Server Components on React Native**](https://twitter.com/SzymonRybczak/status/1769747995862384756)
 
-Conference season is coming up, and the announcements get fewer as people are saving the best for the big stages. One of the topics I’m looking most forward to hearing more about at the upcoming conferences is React Server Components on React Native. Now Szymon Rybczak from Callstack has published an interesting demo of RSC running in RN. I’m really curious to learn more about it, and glad that Szymon has announced that he’ll publish a detailed blog post and the code soon.
+La saison des conférences approche, et les annonces se font de plus en plus rares car les gens gardent le meilleur pour les grands événements. L'un des sujets dont j'ai le plus hâte d'entendre parler lors des prochaines conférences est React Server Components sur React Native. Szymon Rybczak de Callstack a publié une démo intéressante de RSC fonctionnant dans RN. Je suis vraiment curieux d'en savoir plus, et heureux que Szymon ait annoncé qu'il publierait bientôt un article de blog détaillé et le code.
 
 - 💸 [React Universe Conf - Last days to submit talk proposals: CFP closes on March 22. Don’t want to speak at RUC? Grab your early bird ticket!](https://www.reactuniverseconf.com/?utm_campaign=React_Universe_Conf&utm_source=email&utm_content=This_Week_in_React)
-- 📖 [Expo Docs: Migrate from CodePush](https://docs.expo.dev/eas-update/codepush/): Visual Studio App Center is scheduled for retirement on March 31, 2025. Users of CodePush should start thinking about alternatives.
+- 📖 [Expo Docs: Migrate from CodePush](https://docs.expo.dev/eas-update/codepush/) : Visual Studio App Center sera retiré du marché le 31 mars 2025. Les utilisateurs de CodePush doivent commencer à réfléchir à des solutions de remplacement.
 - 📜 [What is the Expo Router?](https://www.themorrow.digital/blog/what-is-the-expo-router)
-- 📜 [React navigation & state machine - Perfecting app flows](https://www.bam.tech/article/react-navigation-state-machine-perfecting-app-flows): Interesting exploration of how to realize complex flows in React Navigation, using either a state machine or a custom navigator.
-- 📜 [Expo Blog - 12 tips for setting up your next Expo project](https://expo.dev/blog/12-tips-for-setting-up-your-next-expo-project): Some of them quite obvious (use TS), but others like app variants for dev and prod or automatic build versioning are valuable reminders.
+- 📜 [React navigation & state machine - Perfecting app flows](https://www.bam.tech/article/react-navigation-state-machine-perfecting-app-flows) : Exploration intéressante de la manière de réaliser des flux complexes dans React Navigation, en utilisant soit une machine à états, soit un navigateur personnalisé.
+- 📜 [Expo Blog - 12 tips for setting up your next Expo project](https://expo.dev/blog/12-tips-for-setting-up-your-next-expo-project) : Certaines sont assez évidentes (utiliser TS), mais d'autres comme les variantes d'applications pour dev et prod ou la version automatique de la construction sont des piqûres de rappel précieuses.
 - 📜 [Ship OTA (Over-The-Air) When in an Emergency](https://www.callstack.com/blog/ship-over-the-air-when-in-an-emergency)
 - 📦 [TenTap - typed, customizable, and extendable Rich Text editor for React Native](https://github.com/10play/10tap-editor)
 - 📦 [React Native 0.74.0-rc.4](https://github.com/facebook/react-native/releases/tag/v0.74.0-rc.4)
