--- a/website/newsletter/179/index.mdx
+++ b/website/newsletter/179/index.mdx
@@ -1,6 +1,6 @@
 ---
 slug: /179
-title: "This Week In React #179: ..."
+title: "This Week In React #179: useActionState, Redwood, Waku, Astro, Pre-rendering, Bun, Kotekan, memo, Radix, shadcn/ui, React-Navigation, RN-Screens, CodePush, VisionOS, TypeScript..."
 authors: [slorber]
 date: 03-27-2024
 unlisted: true
@@ -46,9 +46,13 @@ With 23k stars and 500,000 daily users, react-admin is the framework of choice f
 
 ## ⚛️ React {#react}
 
+[![React Server Components now in RedwoodJS](/emails/issues/179/redwood.jpg)](https://redwoodjs.com/blog/rsc-now-in-redwoodjs)
+
 [**React Server Components now in RedwoodJS**](https://redwoodjs.com/blog/rsc-now-in-redwoodjs)
 
-Bighorn is the next Redwood “epoch”, starting at v8.0, and will bet all-in on React Server Components. This article explains why Redwood now prefers to bet on RSCs rather than GraphQL, which wasn’t the best DX to get started with for most devs and projects. However, GraphQL will remain supported and can be used alongside RSCs in the same app. Redwood Cells now allow you to export a new “data” function to load the Cell data. You can try Redwood Bighorn today as a v8 canary release, but there are still many rough edges mentioned in the blog post, that they’ll fix before the official major release. There’s another interesting article to read [comparing Redwood routing conventions to Next.js and Remix](https://redwoodjs.com/blog/whats-different-comparing-the-router-in-nextjs-app-api-nextjs-pages-api-remix-and-redwoodjs).
+Bighorn, the next Redwood “epoch” starting at v8.0, will bet all-in on React Server Components. This article explains why Redwood now prefers RSCs over GraphQL, which wasn’t the best DX to get started with for most devs and projects. GraphQL will remain supported and can be used alongside RSCs in the same app. Redwood Cells now allow you to export a new “data” function to load the Cell data.
+
+You can try Redwood Bighorn today as a v8 canary release, but there are still many rough edges mentioned in the blog post, that they’ll fix before the official major release. There’s another interesting article to read [comparing Redwood routing conventions to Next.js and Remix](https://redwoodjs.com/blog/whats-different-comparing-the-router-in-nextjs-app-api-nextjs-pages-api-remix-and-redwoodjs).
 
 ---
 
