--- a/website/newsletter/179/index.mdx
+++ b/website/newsletter/179/index.mdx
@@ -1,6 +1,6 @@
 ---
 slug: /179
-title: "This Week In React #179: useActionState, Redwood, Waku, Astro, Pre-rendering, Bun, Kotekan, memo, Radix, shadcn/ui, React-Navigation, RN-Screens, CodePush, VisionOS, TypeScript..."
+title: "This Week In React #179: useActionState, Redwood, Waku, Astro, Pre-rendering, Bun, Kotekan, memo, Radix, shadcn/ui, React-Navigation, RN-Screens, CodePush, VisionOS, TypeScript, Node.js..."
 authors: [slorber]
 date: 03-27-2024
 unlisted: true
@@ -8,9 +8,15 @@ unlisted: true
 
 Hi everyone!
 
-React Paris mention
+Another week full of interesting news! I found many links, and saved a few of them for next week, which should be a quiet one due to Easter Monday.
 
-**🗓 [React Connection - 22 April](https://reactconnection.io/) + [React-Native Connection - 23 April](https://reactnativeconnection.io/) - 🇫🇷 Paris - 2 days of web/mobile conferences. Get a [-20% discount](https://www.billetweb.fr/react-connection-2024?discount=TWIR) with code "TWIR".**
+It's exciting to see Waku and Redwood becoming stronger meta-frameworks, and new innovative experiments built on top of Bun such as Kotekan and a pre-rendering macro.
+
+React Native also has interesting updates, notably a React Navigation v7 sneak peek, and a nice React Native Screen upgrade.
+
+I was at [React.paris](https://react.paris/) last week. It was a really great conf, and it was nice to meet some of you! It's great that Paris is finally back in the React conf game.
+
+The party is not over, because next month we also have [React Connection](https://reactconnection.io/) and [React Native Connection](https://reactnativeconnection.io/) the 22-23 April in Paris! By the way the newsletter is once again a conf media partner. You can get a [-20% discount](https://www.billetweb.fr/react-connection-2024?discount=TWIR) with the code "TWIR", and we'll run a ticket giveaway on Twitter this Friday.
 
 <!-- truncate -->
 
@@ -70,7 +76,10 @@ You can try Redwood Bighorn today as a v8 canary release, but there are still ma
 - 📜 [Why I Like React (even in 2024)](https://ejosh.co/de/2024/03/why-i-like-react-even-in-2024/)
 - 📜 [Building a «hold to confirm» button with Framer Motion](https://sinja.io/blog/hold-to-confirm-button-react-framer-motion)
 - 📜 [React useEffect and objects as dependency - 4 approaches to avoid unnecessary re-renders](https://profy.dev/article/react-useeffect-with-object-dependency)
+- 📜 [React-Three-Fiber - Moebius-style post-processing and other stylized shaders](https://blog.maximeheckel.com/posts/moebius-style-post-processing/)
 - 📜 [How to Build Your Own ChatGPT Clone Using Clerk & AWS Bedrock](https://conermurphy.com/blog/how-to-build-your-own-chatgpt-clone-using-clerk-aws-bedrock)
+- 📜 [Exploring useSyncExternalStore, a lesser-known React Hook](https://blog.logrocket.com/exploring-usesyncexternalstore-react-hook/)
+- 📜 [Remix Case Study - Shopify rebuilding Shop with Remix](https://remix.run/blog/shop-case-study)
 - 📦 [Waku 0.20 - Introducing “pages router”](https://waku.gg/blog/introducing-pages-router): Waku continues to push toward becoming a first-class React meta-framework. The latest release adds a lightweight file-based router and the introduction article presents its conventions. You can choose between static or dynamic rendering on a per-page basis.
 - 📦 [Kotekan - A simple React framework built on Bun, supporting React Server Components](https://kotekan.dev/blog/introducing-kotekan): My co-author Benedikt created his own experimental meta-framework, supporting React Server Components. Unlike other frameworks trying to stay decoupled from a specific runtime, Kotekan leverages tight coupling with Bun for both bundling and runtime. It looks like other interesting things are not mentioned in the intro post, notably a mobile app demo using react-strict-dom and StyleX. That’s impressive that the website is already built with it.
 - 📦 [Radix Themes 3.0](https://www.radix-ui.com/blog/themes-3): This new version adds custom color palettes, many new components, and a new layout engine.
