--- a/website/newsletter/179/index.mdx
+++ b/website/newsletter/179/index.mdx
@@ -15,7 +15,7 @@ React Native also has interesting updates, notably a React Navigation v7 sneak p
 
 I was at [React.paris](https://react.paris/) last week. It was a really great conf, and it was nice to meet some of you! It's great that Paris is finally back in the React conf game.
 
-The party is not over, because next month we also have [React Connection](https://reactconnection.io/) and [React Native Connection](https://reactnativeconnection.io/) the 22-23 April in Paris! By the way the newsletter is once again a conf media partner. You can get a [-20% discount](https://www.billetweb.fr/react-connection-2024?discount=TWIR) with the code "TWIR", and we'll run a ticket giveaway on Twitter this Friday.
+The party is not over, because next month we also have [React Connection](https://reactconnection.io/) and [React Native Connection](https://reactnativeconnection.io/) on 22-23 April in Paris! The newsletter is once again a conf media partner. You can get a [-20% discount](https://www.billetweb.fr/react-connection-2024?discount=TWIR) with the code "TWIR", and we'll run a ticket giveaway on Twitter this Friday.
 
 <!-- truncate -->
 
