--- a/website/newsletter/179/index.mdx
+++ b/website/newsletter/179/index.mdx
@@ -62,7 +62,7 @@ You can try Redwood Bighorn today as a v8 canary release, but there are still ma
 ---
 
 - 💸 [React Universe Conf - We care about a diverse lineup, so we prolong our CFP until April 5. We encourage all women in tech to submit talks!](https://www.reactuniverseconf.com/?utm_campaign=React_Universe_Conf&utm_source=email&utm_content=This_Week_in_React)
-- 👀 [React Core PR - useActionState](https://github.com/facebook/react/pull/28491): The PR is now merged and in the process of being added to the Canary changelog.
+- 👀 [React Core PR - useActionState](https://github.com/facebook/react/pull/28491): The PR is now merged and has been added to the [canary changelog](https://github.com/facebook/react/blob/main/CHANGELOG-canary.md).
 - 💬 [Astro proposal - Form actions](https://github.com/withastro/roadmap/discussions/871): Astro is exploring options for form submissions and mutations to feed their new Astro DB product, taking into consideration React 19 islands using useActionState() and useFormStatus().
 - 🐦 [Sebastian Silbermann (React core team) joins Vercel](https://twitter.com/sebsilbermann/status/1772229730747490691)
 - 📖 [Remix new docs - CSS files](https://remix.run/docs/en/main/guides/css-files)
