remove NBSP/ZWSP

--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/179/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/179/index.mdx
@@ -151,9 +151,9 @@ Make sure to also read the [v7 upgrade guide](https://reactnavigation.org/docs/7
 ## 🇫🇷 En français {#fr}
 
 - 🇫🇷 [ReactHebdo.fr - Dernières éditions traduites en français](https://thisweekinreact.com/fr/newsletter)
-- 🎥 [Je fais la même App Avec 4 Framework - Lequel est le mieux en 2024 ?](​https://www.youtube.com/watch?v=Rxzupf1NbHw)
-- 🎥 [Comment configurer un monorepo avec Remix, NestJS et Turborepo​](https://algomax.fr/blog/comment-configurer-un-monorepo-avec-remix-nest-js-et-turborepo)
-- 🎥 [La vraie révolution de l’AI - Vercel AI SDK v3​](https://www.youtube.com/watch?v=27yRFc32118&t=5s)
+- 🎥 [Je fais la même App Avec 4 Framework - Lequel est le mieux en 2024?](https://www.youtube.com/watch?v=Rxzupf1NbHw)
+- 🎥 [Comment configurer un monorepo avec Remix, NestJS et Turborepo](https://algomax.fr/blog/comment-configurer-un-monorepo-avec-remix-nest-js-et-turborepo)
+- 🎥 [La vraie révolution de l’AI - Vercel AI SDK v3](https://www.youtube.com/watch?v=27yRFc32118&t=5s)
 - 🎥 [Ces 6 nouveautés vont te plaire ! Tailwind v4, Million Lint, Payload CMS, Tanstack, Remix ...](https://www.youtube.com/watch?v=y-hptYWZUyI)
 
 ---
