--- a/website/src/pages/conferences.mdx
+++ b/website/src/pages/conferences.mdx
@@ -41,6 +41,7 @@ We already partnered with those conferences:
 - [React.js Day - Verona](https://2023.reactjsday.it/)
 - [React Connection - Paris](https://reactconnection.io/)
 - [React Native Connection - Paris](https://reactnativeconnection.io/)
+- [React Paris](https://react.paris/)
 
 These conferences usually report some **extra ticket sales** attributed to our promo code, and consider this partnership to be worthwhile.
 
