--- a/website/newsletter/180/index.mdx
+++ b/website/newsletter/180/index.mdx
@@ -42,7 +42,7 @@ Take the guesswork out of which components to focus on next with Omlet.
 
 ## ⚛️ React {#react}
 
-<Todo />
+- 💸 [React app authentication and user management secured by Clerk, ensuring a quick setup with pre-built components.](https://go.clerk.com/WBJx175)
 
 <SubscribeFormEmbed placement="middle" />
 
@@ -66,7 +66,7 @@ Refine enables teams to rapidly develop production-ready apps while maintaining 
 
 ## 📱 React-Native {#react-native}
 
-<Todo />
+- 💸 [PowerSync – Postgres\<>SQLite sync layer for local-first apps with simple state management and real-time reactivity](https://www.powersync.com/?utm_source=newsletter&utm_medium=sponsorship&utm_campaign=this-week-in-react)
 
 ---
 
