--- a/website/newsletter/180/index.mdx
+++ b/website/newsletter/180/index.mdx
@@ -1,6 +1,6 @@
 ---
 slug: /180
-title: "This Week In React #180: Transitions, Drag & Drop, Metadata APIs, React name, Next.js Auth, useOptimistic, Cally, Docusaurus, New Architecture, RN Server Components, Privacy Manifest, Bun, xz, TypeScript, Signals..."
+title: "This Week In React #180: Transitions, Drag & Drop, Metadata APIs, React name, Next.js Auth, useOptimistic, Cally, Docusaurus, New Architecture, Gesture Handler, Server Components, Privacy Manifest, Bun, xz, TypeScript, Signals..."
 authors: [slorber]
 date: 04-03-2024
 ---
