--- a/website/newsletter/181/index.mdx
+++ b/website/newsletter/181/index.mdx
@@ -10,9 +10,8 @@ Hi everyone!
 
 <Todo />
 
-*   🗓 [React Connection - 22 April](https://reactconnection.io/) + [React-Native Connection - 23 April](https://reactnativeconnection.io/) - 🇫🇷 Paris - 2 days of web/mobile conferences. Get a [\-20% discount](https://www.billetweb.fr/react-connection-2024?discount=TWIR) with code "TWIR".
-    
-*    🗓 [](https://reactconnection.io/)[App.js Conf](http://app.js) - 🇵🇱 Kraków - 22-24 May. Get a [](https://www.billetweb.fr/react-connection-2024?discount=TWIR)[10% discount](https://ti.to/appjs/2024/discount/TWIR) with code "TWIR".
+- 🗓 [React Connection - 22 April](https://reactconnection.io/) + [React-Native Connection - 23 April](https://reactnativeconnection.io/) - 🇫🇷 Paris - 2 days of web/mobile conferences. Get a [\-20% discount](https://www.billetweb.fr/react-connection-2024?discount=TWIR) with code "TWIR".
+- 🗓 [](https://reactconnection.io/)[App.js Conf](http://app.js) - 🇵🇱 Kraków - 22-24 May. Get a [](https://www.billetweb.fr/react-connection-2024?discount=TWIR)[10% discount](https://ti.to/appjs/2024/discount/TWIR) with code "TWIR".
 
 <!-- truncate -->
 
@@ -40,7 +39,7 @@ RevenueCat gives you everything you need to monetize, analyze, and grow your app
 
 <Todo />
 
-- 💸 [Get drop-in authentication for your React app using Clerk, with ready-to-use components, hooks, and helpers,](https://go.clerk.com/WtsedFE)
+- 💸 [Get drop-in authentication for your React app using Clerk, with ready-to-use components, hooks, and helpers.](https://go.clerk.com/WtsedFE)
 
 <SubscribeFormEmbed placement="middle" />
 
